--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,10 +1,3 @@
-/**
- * Any CSS included here will be global. The classic template
- * bundles Infima by default. Infima is a CSS framework designed to
- * work well for content-centric websites.
- */
-
-/* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: #c256c3;
   --ifm-color-primary-dark: #b04ab0;
@@ -17,7 +10,6 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
-/* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
   --ifm-color-primary: #d466d1;
   --ifm-color-primary-dark: #c85ac5;
@@ -59,4 +51,15 @@
   border-top: 1px solid rgba(194, 86, 195, 0.1);
   padding-top: 2rem;
   margin-top: 2rem;
+}
+
+/* Intro Page Card Alignment */
+.intro-card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.intro-card .card__body {
+  flex-grow: 1;
 }
